--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dayjs": "^1.11.7",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "mantine-datatable": "^2.2.6",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
